# libdkim

./: README  dkim.cpp  dkim.h  dkimsign.cpp  dkimverify.cpp  libdkim.def
src/: CMakeLists.txt  Makefile  Makefile.vc  dkim.cpp  dkim.h  dkimbase.cpp  dkimbase.h  dkimsign.cpp  dkimsign.h  dkimverify.cpp  dkimverify.h  dns.cpp  dns.h  libDKIMConfig.cmake.in  libdkim.rc  libdkim.vcproj  libdkimtest.cpp  resource.h
